src/main/openshift/template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
      service.alpha.openshift.io/dependencies: '[{"name":"testapp-postgresql","namespace":"","kind":"Service"}]'
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: testapp
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: testapp
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The database server's port.
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: testapp-postgresql
  spec:
    ports:
    - port: 5432
      targetPort: 5432
    selector:
      deploymentConfig: testapp-postgresql
- apiVersion: route.openshift.io/v1
  id: testapp-http
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: www
  spec:
    to:
      name: testapp
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      application: testapp
      build: testapp
      template: testapp-monolith-src-build
    name: testapp
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: testapp
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: testapp:latest
    source:
      git:
        uri: https://github.com/jamesfalkner/eap-postgres
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: DockerImage
          name: registry.access.redhat.com/jboss-eap-7/eap72-openshift:1.0
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: testapp
  spec:
    replicas: 1
    selector:
      deploymentConfig: testapp
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: testapp
          deploymentConfig: testapp
        name: testapp
      spec:
        containers:
        - env:
          - name: DB_SERVICE_PREFIX_MAPPING
            value: testapp-postgresql=DB
          - name: DB_JNDI
            value: java:jboss/datasources/testappDS
          - name: DB_USERNAME
            value: testapp
          - name: DB_PASSWORD
            value: testapp123
          - name: DB_DATABASE
            value: monolith
          - name: TX_DATABASE_PREFIX_MAPPING
            value: testapp-postgresql=DB
          - name: OPENSHIFT_KUBE_PING_LABELS
            value: application=testapp
          - name: OPENSHIFT_KUBE_PING_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: HTTPS_KEYSTORE_DIR
            value: /etc/eap-secret-volume
          - name: HTTPS_KEYSTORE
            value: keystore.jks
          - name: HTTPS_KEYSTORE_TYPE
            value: JKS
          - name: HTTPS_NAME
            value: jboss
          - name: HTTPS_PASSWORD
            value: mykeystorepass
          - name: MQ_TOPICS
            value: orders
          - name: MQ_CLUSTER_PASSWORD
            value: testapp123
          - name: JGROUPS_ENCRYPT_SECRET
            value: testapp-secret
          - name: JGROUPS_ENCRYPT_KEYSTORE_DIR
            value: /etc/jgroups-encrypt-secret-volume
          - name: JGROUPS_ENCRYPT_KEYSTORE
            value: jgroups.jceks
          - name: JGROUPS_ENCRYPT_NAME
            value: secret-key
          - name: JGROUPS_ENCRYPT_PASSWORD
            value: password
          - name: JGROUPS_CLUSTER_PASSWORD
            value: openshift123
          - name: DEFAULT_JOB_REPOSITORY
            value: testapp-postgresql
          - name: TIMER_SERVICE_DATA_STORE
            value: testapp-postgresql
          image: testapp
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                - /opt/eap/bin/jboss-cli.sh
                - -c
                - :shutdown(timeout=60)
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/livenessProbe.sh
          name: testapp
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: https
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health.jsp
              port: 8080
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /etc/eap-secret-volume
            name: eap-keystore-volume
            readOnly: true
          - mountPath: /etc/jgroups-encrypt-secret-volume
            name: eap-jgroups-keystore-volume
            readOnly: true
        serviceAccountName: testapp-serviceaccount
        terminationGracePeriodSeconds: 75
        volumes:
        - name: eap-keystore-volume
          secret:
            secretName: testapp-secret
        - name: eap-jgroups-keystore-volume
          secret:
            secretName: testapp-secret
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - testapp
        from:
          kind: ImageStreamTag
          name: testapp:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: testapp
      template: testapp-monolith-src-build
    name: testapp-postgresql
  spec:
    replicas: 1
    selector:
      deploymentConfig: testapp-postgresql
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: testapp
          deploymentConfig: testapp-postgresql
        name: testapp-postgresql
      spec:
        containers:
        - env:
          - name: POSTGRESQL_USER
            value: testapp
          - name: POSTGRESQL_PASSWORD
            value: testapp123
          - name: POSTGRESQL_DATABASE
            value: monolith
          - name: POSTGRESQL_MAX_CONNECTIONS
            value: "100"
          - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
            value: "100"
          image: postgresql
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: testapp-postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        terminationGracePeriodSeconds: 60
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - testapp-postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:latest
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    labels:
      template: testapp-monolith-src-build
    name: testapp-serviceaccount
  secrets:
  - name: testapp-secret
- apiVersion: authorization.openshift.io/v1
  groupNames: null
  kind: RoleBinding
  metadata:
    labels:
      template: testapp-monolith-src-build
    name: testapp-serviceaccount_view
  roleRef:
    name: view
  subjects:
  - kind: ServiceAccount
    name: testapp-serviceaccount
- apiVersion: authorization.openshift.io/v1
  groupNames:
  - system:serviceaccounts:ci
  kind: RoleBinding
  metadata:
    labels:
      template: testapp-monolith-src-build
    name: ci_admin
  roleRef:
    name: admin
  subjects:
  - kind: SystemGroup
    name: system:serviceaccounts:ci
- apiVersion: v1
  data:
    jgroups.jceks: zs7OzgAAAAIAAAABAAAAAwAKc2VjcmV0LWtleQAAAVDQhuHmrO0ABXNyADNjb20uc3VuLmNyeXB0by5wcm92aWRlci5TZWFsZWRPYmplY3RGb3JLZXlQcm90ZWN0b3LNV8pZ5zC7UwIAAHhyABlqYXZheC5jcnlwdG8uU2VhbGVkT2JqZWN0PjY9psO3VHACAARbAA1lbmNvZGVkUGFyYW1zdAACW0JbABBlbmNyeXB0ZWRDb250ZW50cQB+AAJMAAlwYXJhbXNBbGd0ABJMamF2YS9sYW5nL1N0cmluZztMAAdzZWFsQWxncQB+AAN4cHVyAAJbQqzzF/gGCFTgAgAAeHAAAAAPMA0ECHcwLGK6EDyLAgEUdXEAfgAFAAAAmCu9wRKf1aYYUOEWe406ncPtIdm3147G7MJyWUu2kJVY15a2QxeZi9w5J3AF6T64CvylUuQjpcC4DWXwVn9BefntkBR8CzTiH [...]
    keystore.jks: /u3+7QAAAAIAAAABAAAAAQAFamJvc3MAAAFVFbYp5AAABQIwggT+MA4GCisGAQQBKgIRAQEFAASCBOqe/lTeehnds9ffJp/EYKY2K7o9CvvyvgiqvdaGqiZxwWjmoYBEuBxJBUkr7uyYr2g3Viui18djJh9paWdBfPRCEWsLxbMBmig+5OXe1U536PTNZlzkdrwSJpusiwwWLiog/kQ+Gp82VzHxsueNVkewKZ6LvdAq+5Pw7148cxgfnm+2j0La1YnX4/TAtY6A33HjU3HxPxpkLCBP66THxjJvm+n5xg+6eAPu6n/c3mWShhudf0k7FAHLgqMqZt22GMlIv73azdz5kf+opcF8nHN/SDnrgmBbX+GBFvMQ64a3zfLGMnCH8R7L2v5K0uH4AvOHHU9+g7KGk/obPOFyqjloPGIGwzyX4UhxsxP9+wU45RVg02SdoOsqsKYeF7JV1t+uj1+WXDkEaxGYx9u5bF [...]
  kind: Secret
  metadata:
    annotations:
      description: Default HTTPS keystore (keystore.jks) with name 'jboss' and password
        'mykeystorepass' and JGoups keystore (jgroups.jceks) with name 'secret-key'
        and password 'password'
    labels:
      template: testapp-monolith-src-build
    name: testapp-secret
kind: List
metadata: {}
